--- a/frankenflow/static/index.html
+++ b/frankenflow/static/index.html
@@ -12,6 +12,7 @@
     <title>Frankenflow</title>
 
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/css/vis.min.css" rel="stylesheet">
     <link href="/static/css/custom.css" rel="stylesheet">
 
 </head>
@@ -55,8 +56,13 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-12">
-            Graph: <pre id="graph"></pre>
+        <div class="col-md-7" style="height: 500px">
+            <!--Graph: <pre style="visibility: hidden" id="graph"></pre>-->
+            <div id="graph_plot" style="height:100%">
+            </div>
+        </div>
+        <div class="col-md-5">
+            <pre id="node_detail"></pre>
         </div>
     </div>
 </div>
@@ -66,6 +72,7 @@
 <script src="/static/js/jquery.js"></script>
 <script src="/static/js/moment.min.js"></script>
 <script src="/static/js/bootstrap.min.js"></script>
+<script src="/static/js/vis.min.js"></script>
 <script src="/static/js/custom.js"></script>
 
 </body>
