--- a/frankenflow/static/index.html
+++ b/frankenflow/static/index.html
@@ -43,6 +43,10 @@
                     class="btn btn-sm btn-default">
                 Iterate
             </button>
+            <button type="button" id="update_graph_button"
+                    class="btn btn-sm btn-default">
+                Update Graph
+            </button>
         </div>
     </div>
     <div class="row">
