--- a/frankenflow/static/index.html
+++ b/frankenflow/static/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="full" lang="en">
+<html lang="en">
 
 <head>
 
@@ -13,6 +13,7 @@
 
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/css/vis.min.css" rel="stylesheet">
+    <link href="/static/css/jquery.jsonview.css" rel="stylesheet">
     <link href="/static/css/custom.css" rel="stylesheet">
 
 </head>
@@ -24,8 +25,8 @@
 </div>
 
 <!--Navigation bar-->
-<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container">
+<nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+    <div class="container-fluid">
         <div class="navbar-header">
             <a class="navbar-brand" href="#">Frankenflow</a>
         </div>
@@ -36,47 +37,43 @@
     </div>
 </nav>
 
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-md-12">
+<!--Content-->
+<div class="container-fluid" id="main-container">
+    <div class="row" id="control-center">
+        <div class="col-md-12 center-block">
             <button type="button" id="iterate_button"
-                    class="btn btn-sm btn-default">
+                    class="btn btn-xs btn-success">
                 Iterate
             </button>
             <button type="button" id="update_graph_button"
-                    class="btn btn-sm btn-default">
+                    class="btn btn-xs btn-success">
                 Update Graph
             </button>
         </div>
     </div>
-    <div class="row">
-        <div class="col-md-12">
-            Status: <pre id="status_status"></pre>
+    <div class="row" id="status-block">
+        <div class="col-md-2">
+            <b>Status:</b> <i><span id="status_status"></span></i>
+        </div>
+        <div class="col-md-10">
+            <b>Message:</b> <i><span id="status_message"></span></i>
         </div>
     </div>
-    <div class="row">
-        <div class="col-md-12">
-            Message: <pre id="status_message"></pre>
+    <div class="row" id="main_content">
+        <div class="col-md-7 full-height">
+            <div id="graph_plot" class="full-height"></div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-md-7" style="height: 500px">
-            <!--Graph: <pre style="visibility: hidden" id="graph"></pre>-->
-            <div id="graph_plot" style="height:100%">
-            </div>
-        </div>
-        <div class="col-md-5">
+        <div class="col-md-5 full-height" class="full-height">
             <pre id="node_detail"></pre>
         </div>
     </div>
 </div>
 
-<!-- Put your page content here! -->
-
 <script src="/static/js/jquery.js"></script>
 <script src="/static/js/moment.min.js"></script>
 <script src="/static/js/bootstrap.min.js"></script>
 <script src="/static/js/vis.min.js"></script>
+<script src="/static/js/jquery.jsonview.js"></script>
 <script src="/static/js/custom.js"></script>
 
 </body>
