Clustered graph plotting with lodash

--- a/frankenflow/static/index.html
+++ b/frankenflow/static/index.html
@@ -49,6 +49,10 @@
                     class="btn btn-xs btn-success">
                 Update Graph
             </button>
+            <button type="button" id="toggle_graph_button"
+                    class="btn btn-xs btn-warning">
+                Toggle Graph
+            </button>
         </div>
     </div>
     <div class="row" id="status-block">
@@ -74,6 +78,7 @@
 <script src="/static/js/bootstrap.min.js"></script>
 <script src="/static/js/vis.min.js"></script>
 <script src="/static/js/jquery.jsonview.js"></script>
+<script src="/static/js/lodash.min.js"></script>
 <script src="/static/js/custom.js"></script>
 
 </body>
