--- a/frankenflow/static/index.html
+++ b/frankenflow/static/index.html
@@ -24,6 +24,32 @@
 <div id="error_message">
 </div>
 
+<!--Modal giving the capability to reset a job.-->
+<div class="modal fade" id="reset-job-modal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"
+                        aria-label="Close"><span
+                        aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title">Reset Job</h4>
+            </div>
+            <div class="modal-body">
+                <p>Choose job:</p>
+                <select id="job_selector"></select>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default"
+                        data-dismiss="modal">Cancel
+                </button>
+                <button type="button" class="btn btn-danger"
+                        id="reset_job_button">Reset
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <!--Navigation bar-->
 <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
     <div class="container-fluid">
@@ -50,9 +76,17 @@
                 Update Graph
             </button>
             <button type="button" id="toggle_graph_button"
-                    class="btn btn-xs btn-warning">
+                    class="btn btn-xs btn-info">
                 Toggle Graph
             </button>
+            <div class="pull-right">
+                <button type="button"
+                        data-toggle="modal"
+                        data-target="#reset-job-modal"
+                        class="btn btn-xs btn-warning">
+                    Reset Job
+                </button>
+            </div>
         </div>
     </div>
     <div class="row" id="status-block">
