--- a/frankenflow/static/index.html
+++ b/frankenflow/static/index.html
@@ -102,7 +102,7 @@
             <div id="graph_plot" class="full-height"></div>
         </div>
         <div class="col-md-5 full-height" class="full-height">
-            <pre id="node_detail"></pre>
+            <div id="node_detail"></div>
         </div>
     </div>
 </div>
