--- a/frankenflow/static/index.html
+++ b/frankenflow/static/index.html
@@ -93,7 +93,7 @@
         <div class="col-md-2">
             <b>Status:</b> <i><span id="status_status"></span></i>
         </div>
-        <div class="col-md-10">
+        <div class="col-md-10" id="status_tooltip">
             <b>Message:</b> <i><span id="status_message"></span></i>
         </div>
     </div>
