Don't auto-update graph. Its too slow for large graphs.

--- a/frankenflow/static/index.html
+++ b/frankenflow/static/index.html
@@ -72,7 +72,7 @@
                 Iterate
             </button>
             <button type="button" id="update_graph_button"
-                    class="btn btn-xs btn-success">
+                    class="btn btn-xs btn-success pulse">
                 Update Graph
             </button>
             <button type="button" id="toggle_graph_button"
